--- a/src/Components/SearchDropdown/index.css
+++ b/src/Components/SearchDropdown/index.css
@@ -1,12 +1,21 @@
 .dd-wrapper {
   position: relative;
-  border: 1px solid #eee;
   border-bottom: none;
   border-radius: 0.25rem;
+  min-height: 41px;
 }
+
+.dd-wrapper-absolute {
+  position: absolute;
+  width: 100%;
+  background: #fff;
+  border: 1px solid #eee;
+}
+
 .dd-wrapper:focus {
   outline: none;
 }
+
 .dd-wrapper .dd-header {
   display: flex;
   justify-content: space-between;
@@ -15,21 +24,26 @@
   padding: 0.5rem;
   border-bottom: 1px solid #eee;
 }
+
 .dd-wrapper .dd-header__title {
   width: 90%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .dd-wrapper .dd-header__action {
   color: rgba(33, 37, 41, 0.5);
 }
+
 .dd-wrapper .dd-header:focus {
   outline: none;
 }
+
 .dd-wrapper .dd-textbox-wrapper {
   font-weight: normal;
 }
+
 .dd-wrapper .dd-textbox-wrapper input {
   display: block;
   width: 100%;
@@ -39,12 +53,15 @@
   border: 1px solid #eee;
   border-width: 0 0 1px 0;
 }
+
 .dd-wrapper .dd-textbox-wrapper input::placeholder {
   color: #828a91;
 }
+
 .dd-wrapper .dd-textbox-wrapper input:focus {
   outline: none;
 }
+
 .dd-wrapper .dd-list {
   padding: 0;
   margin: 0;
@@ -55,6 +72,7 @@
   border: 1px solid #eee;
   border-width: 1px 0;
 }
+
 .dd-wrapper .dd-list li {
   list-style-type: none;
   padding: 0.25rem 0.5rem;
@@ -62,6 +80,7 @@
   text-align: left;
   cursor: pointer;
 }
+
 .dd-wrapper .dd-list li.active,
 .dd-wrapper .dd-list li:hover,
 .dd-wrapper .dd-list li:focus {
@@ -69,6 +88,7 @@
   background-color: #f5f7f9;
   outline: none;
 }
+
 .dd-wrapper .no_results {
   font-size: 14px;
   line-height: 24px;
